--- a/products.html
+++ b/products.html
@@ -100,10 +100,9 @@
                 <tr class="tr">
                   <td id="checkBox"><input type="checkbox" /></td>
                   <td id="name-description" active>
-                    <img src="photos/screw.png" alt="" /><span
-                      id="active"
-                    ></span
-                    >
+                    <img src="photos/screw.png" alt="" />
+                                                                <span class="active-dot"></span>
+
                     <div class="name">
 
                     <h5>Screw</h5>
@@ -121,10 +120,10 @@
                 <tr>
                   <td id="checkBox"><input type="checkbox" /></td>
                   <td id="name-description">
-                    <img src="photos/cylinder pin.png" alt="" /><span
-                      id="active"
-                    ></span
-                    >
+                    <img src="photos/cylinder pin.png" alt="" />
+
+                                            <span class="inactive-dot"></span>
+
                     <div class="name">
 
                     <h5>Cylinder Pin</h5>
